2005-09-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Genius ColorPage Slim
	  1200.

2005-09-07  Oliver Schirrmeister <oschirr@abm.de>

	* backend/fujitsu.c: enabled dropoutcolor for all fi-* scanners.
	  Applied patch from Mario Goppold: Bugfixes for the M3092DCd     

2005-09-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.ru.po: Updated Russian translation (from Vitaly
	  Lipatov <LAV@vl3143.spb.edu>).

2005-09-03  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.h backend/snapscan-scsi.c: (Hopefully) fixed
	  some debugging code for Epson scanners that only works after 
	  firmware upload.                  

2005-09-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Epson Perfection 4490
	  Photo. 
	* tools/hotplug/libsane.usermap: Added HP PSC 750.

2005-09-01  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_devices.c
	  backend/gt68xx_generic.c backend/gt68xx_high.c
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES: Genius
	  ColorPage Vivid 1200 X is reported to work. Genius ColorPage Vivid
	  4 XE seems to be the same as 4 X, it just doesn't have
	  buttons. Cleanup of .desc file. Fixed gain setting. Mustek
	  ScanExpress A3 USB 600 dpi color scanning works now. 
	* tools/check-usb-chip.c: Added detection for SQ113 chip
	  (e.g. Mustek BearPaw 2448 TA Pro).	

2005-08-31  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Removed Mustek 1800 A3 Pro
	  (this is actually a P3600 A3 Pro). 
	* doc/descriptions-external/mustek_usb2.desc: Mustek BearPaw 2448
	  TA Pro has status "good" now.
	
2005-08-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Removed Mustek BearPaw 2448
	  TA Pro (now supported by external Mustek USB2 backend). Added
	  comments about that backend to some other scanners that may be